tests/invalid/dict_eq_missing_value_eq/main.py
def main() -> None:
    a: dict[int, int] = {1: 7}
    b: dict[int, int] = {1: 7}
    print(a < b)


if __name__ == "__main__":
    main()
